--- a/app/components/properties/properties.scss
+++ b/app/components/properties/properties.scss
@@ -138,6 +138,10 @@ $defaultFontSize: 1.2rem;
     button.flat {
         border: 1px solid #aaa;
     }
+    textarea.code {
+        font-family: "Lucida Console", Monaco, monospace;
+        height: 500px;
+    }
 }
 .fixed_headers {
     table-layout: fixed;
