--- a/app/components/properties/properties.scss
+++ b/app/components/properties/properties.scss
@@ -6,16 +6,16 @@ $defaultFontSize: 1.2rem;
     padding: 5px;
 }
 #panel-properties{
-    height: calc(100vh - 290px);
+    xheight: calc(100vh - 290px);
 }
 .lemonade-properties {
-    height: calc(100vh - 233px);
+    xheight: calc(100vh - 233px);
     overflow: hidden;
     #properties-form {
         background: white;
         z-index: 100;
         zoom: .8;
-        height: calc(100vh - 331px); width: 100%;
+        xheight: calc(100vh - 331px); width: 100%;
         padding: 5px;
 
         fieldset {
@@ -40,15 +40,10 @@ $defaultFontSize: 1.2rem;
         padding: 5px !important;
     }
     .property-description {
-        background: #eee;
-        border: 1px solid #222;
         bottom: 10px;
-        font-size: $defaultFontSize;
-        height: 100px;
-        padding: 2px; 
-        position: absolute;
-        width: calc(100% - 6px);
-        left: 4px;
+        font-size: calc($defaultFontSize + 1px);
+        padding: 5px; 
+        text-align: justify;
     }
 
     table {
