--- a/app/components/app/app-template.html
+++ b/app/components/app/app-template.html
@@ -82,55 +82,64 @@
                             <div class="panel-heading">
                                 Deploy configuration
                             </div>
-                            <div class="panel-content" style="padding: 5px 5px 10px 5px">
+                            <div class="panel-content" style="padding: 5px 5px 10px 5px" v-if="showDeploy">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-md-12">
                                             Please, complete the required information for the deployment of the workflow:
                                         </div>
-                                        <div class="col-md-12">
+                                        <div class="col-md-6">
                                             <label>Name:</label>
-                                            <input type="text" class="form-control" required/>
+                                            <input type="text" class="form-control" required v-model="workflow.deploy.name" maxlength="50"/>
                                         </div>
-                                        <div class="col-md-12">
+                                        <div class="col-md-6">
                                             <label>Authorization token:</label>
-                                            <input type="text" class="form-control" required/>
+                                            <input type="text" class="form-control" required v-model="workflow.deploy.token" maxlength="20"/>
                                         </div>
                                         <div class="col-md-12">
                                             <label>Description:</label>
-                                            <textarea class="form-control"></textarea>
+                                            <textarea class="form-control" v-model="workflow.deploy.description"></textarea>
                                         </div>
-                                        <div class="col-md-4">
+                                        <div class="col-md-2">
                                             <label>CPUs:</label>
-                                            <input type="text" class="form-control" required/>
+                                            <input type="number" class="form-control" required min="1" v-model="workflow.deploy.cpus" maxlength="4"/>
                                         </div>
-                                        <div class="col-md-4">
-                                            <label>Memory:</label>
-                                            <input type="text" class="form-control" required/>
+                                        <div class="col-md-3">
+                                            <label>Memory (in GB):</label>
+                                            <input type="number" class="form-control" required min="0.5" step="0.5" v-model="workflow.deploy.memory" maxlength="8"/>
                                         </div>
-                                        <div class="col-md-4">
-                                            <label>Response time:</label>
-                                            <input type="text" class="form-control" required/>
+                                        <div class="col-md-3">
+                                            <label>Resp. time (in sec.):</label>
+                                            <input type="number" class="form-control" required min="1" v-model="workflow.deploy.responseTime" maxlength="8"/>
                                         </div>
                                         
                                         <div class="col-md-12">
                                             <br/>
                                             <label>Select how inputs will be deployed</label>
-                                            <table class="table table-bordered">
+                                            <table class="table table-bordered table-condensed">
+                                                <!--
                                                 <thead>
                                                     <tr>
-                                                        <th class="col-md-3 text-center">Operation</th>
-                                                        <th class="col-md-3 text-center">Input name</th>
-                                                        <th class="col-md-3 text-center">Comment</th>
-                                                        <th class="col-md-3 text-center">Action</th>
+                                                        <th class="col-md-2 text-center">Operation</th>
+                                                        <th class="col-md-4 text-center">Mode</th>
+                                                        <th class="col-md-4 text-center">Input name</th>
+                                                        <th class="col-md-2 text-center">Action</th>
                                                     </tr>
                                                 </thead>
+                                                -->
                                                 <tbody>
-                                                    <!--
-                                                <tr v-for="ds in deployInfo.dataSources">
-                                                    <td class="text-center">{{ds.operation.name}}</td>
+                                                <tr v-for="ds in dataSources" @mouseover="selectTaskInDeploy(ds, true)" @mouseout="selectTaskInDeploy(ds, false)">
+                                                    <td class="text-center">
+                                                        <small>{{ds.operation.name}} <br/>
+                                                        <em v-if="ds.forms.comment.value">{{ds.forms.comment.value}}</em></small>
+                                                    </td>
+                                                    <td>
+                                                        <select class="form-control">
+                                                        <option value=""> Single record</option>
+                                                        <option value=""> Batch (records)</option>
+                                                        </select>
+                                                    </td>
                                                     <td><input class="form-control"/></td>
-                                                    <td>{{ds.forms.comment.value || '-'}}</td>
                                                     <td>
                                                         <select class="form-control">
                                                             <option>Keep intact</option>
@@ -139,12 +148,42 @@
                                                         </select>
                                                     </td>
                                                 </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                         <div class="col-md-12">
+                                            <br/>
+                                            <label>Select how outputs will be deployed</label>
+                                            <table class="table table-bordered table-condensed">
+                                                <!--
+                                                <thead>
+                                                    <tr>
+                                                        <th class="col-md-2 text-center">Operation</th>
+                                                        <th class="col-md-4 text-center">Output name</th>
+                                                        <th class="col-md-2 text-center">Action</th>
+                                                    </tr>
+                                                </thead>
                                                 -->
+                                                <tbody>
+                                                <tr v-for="ds in outputs" @mouseover="selectTaskInDeploy(ds, true)" @mouseout="selectTaskInDeploy(ds, false)">
+                                                    <td class="text-center">
+                                                        <small>{{ds.operation.name}} <br/>
+                                                        <em v-if="ds.forms.comment.value">{{ds.forms.comment.value}}</em></small>
+                                                    </td>
+                                                    <td><input class="form-control"/></td>
+                                                    <td>
+                                                        <select class="form-control">
+                                                            <option>Keep intact</option>
+                                                            <option>Discard</option>
+                                                            <option>Use as input for service</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
                                                 </tbody>
                                             </table>
                                         </div>
                                         <div class="col-md-12">
-                                            <button class="btn btn-primary" xclick="execute"><span class="fa fa-play"></span> Execute</button>
+                                            <button class="btn btn-success" xclick="execute"><span class="fa fa-cloud-upload"></span> Confirm</button>
                                             <button class="btn btn-danger" @click="cancelDeploy">Cancel</button>
                                         </div>
                                     </div>
