--- a/app/components/properties/properties.scss
+++ b/app/components/properties/properties.scss
@@ -1,4 +1,5 @@
 $defaultFontSize: 1.2rem;
+$color1: darken(#d9edf7, 50%);
 
 .lemondade-property-help {
     height: 120px;
@@ -43,9 +44,12 @@ $defaultFontSize: 1.2rem;
         padding: 5px !important;
     }
     .property-description {
+        border: 1px solid $color1;
+        background: #d9edf7;
         bottom: 10px;
+        margin:2px 0;
         font-size: calc($defaultFontSize + 1px);
-        padding: 5px; 
+        padding: 5px 5px 0 5px; 
         text-align: justify;
     }
 
